[project]
name = "agent-toolkit"
version = "0.3.0" # added a new solver layer with brute force!
description = "A simple agent wrapper for OpenAI calls"
authors = [{ name = "Dave Wanik", email = "david.w.wanik@gmail.com" }]
dependencies = [
    "openai>=1.0.0",
    "pandas",
    "numpy",
    "jsonschema"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
