[project]
name = "agent-toolkit"
version = "0.4.0" # Add solve_lp_from_prompt() to stitch parser + solver
description = "A simple agent wrapper for OpenAI calls"
authors = [{ name = "Dave Wanik", email = "david.w.wanik@gmail.com" }]
dependencies = [
    "openai>=1.0.0",
    "pandas",
    "numpy",
    "jsonschema"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
